# movie-recommender

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  experiment.ipynb  justfile  notebook.ipynb  prototype.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: file-size.yml  hf-sync.yml
app/: __main__.py  cli.py  constants.py  data.py  gui.py  model.py  utils.py
app/model/: base.py  tfid_lr.py
data/: proto_results.csv  slang.json  test.csv
deprecated/: main.py  train.py
models/: amazonreviews_tfidf_ft20000.pkl  imdb50k_hashing_ft1048576.pkl  imdb50k_tfidf_ft-20000.pkl  imdb50k_tfidf_ft-800.pkl  imdb50k_tfidf_ft20000.pkl  sentiment140_tfidf_ft-20000.pkl  sentiment140_tfidf_ft20000.pkl
